fix analytics
